--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Architectural Real Estate Development - Excellence in creating visionary spaces"
+      content="Summit Realty Group - Premier Architectural Real Estate Development Services"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Architectural Real Estate Development</title>
+    <title>Summit Realty Group - Architectural Excellence</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
